# Climate_monitor_esp32_s3

./: .gitignore  README.md  partitions_example.csv  sdkconfig  sdkconfig.old
UI/Environment_sensor5/: CMakeLists.txt  Environment_sensor.sll  Environment_sensor.spj  Environment_sensor_events.py  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
UI/Environment_sensor5/assets/: ui_font_Inter80.c  ui_font_Inter80.fcfg  ui_font_Interbold40.fcfg  ui_font_Interbold52.fcfg  ui_font_Interbold80.c  ui_font_Interbold80.fcfg  ui_font_Intermedium44.c  ui_font_Intermedium44.fcfg  ui_font_Neue80.c  ui_font_Neue80.fcfg
UI/Environment_sensor5/components/: ui_comp_hook.c
UI/Environment_sensor5/fonts/: ui_font_Interbold40.c  ui_font_Interbold52.c  ui_font_Interbold56.c
UI/Environment_sensor5/images/: ui_img_ambient_temperature_png.c  ui_img_calibrate_png.c  ui_img_co2_png.c  ui_img_co2_resize_png.c  ui_img_droplet2_png.c  ui_img_droplet_png.c  ui_img_light_blue_dithered_png.c  ui_img_light_blue_dithered_rotated_png.c  ui_img_menu_png.c  ui_img_point_temperature_png.c  ui_img_thermometer_png.c
UI/Environment_sensor5/screens/: ui_CO2Screen.c  ui_CalibrationScreen.c  ui_ConfirmationScreen.c  ui_HumidityScreen.c  ui_MainMenu1.c  ui_MainScreen.c  ui_MainScreen1.c  ui_PasswordScreen.c  ui_SettingsScreen.c  ui_TemperatureScreen.c
components/lvgl_setup/: CMakeLists.txt  lvgl_custom.c  lvgl_setup.c  lvgl_water_droplet.c  ui.c  ui_CalibrationScreen.c  ui_ConfirmationScreen.c  ui_MainScreen.c  ui_MainScreen1.c
components/lvgl_setup/assets/: ui_font_Interbold40.c  ui_font_Interbold52.c  ui_img_ambient_temperature_png.c  ui_img_calibrate_png.c  ui_img_co2_png.c  ui_img_co2_resize_png.c  ui_img_droplet_png.c  ui_img_light_blue_dithered_rotated_png.c  ui_img_point_temperature_png.c  ui_img_thermometer_png.c
components/lvgl_setup/images/: CO2.c  CO2_resize.c  Calibrate.c  Droplet.c  Main_screen_gradient.c  Main_screen_gradient2.c  Main_screen_gradient2_dithered.c  Main_screen_gradient3.c  Main_screen_gradient_dithered.c  Settings.c  Thermometer.c  Thermometer2.c  Water.c  blue_green.c  blue_yellow_red2.c  co2.c  co2_arc.c  dithered1.c  droplet.c  droplet2.c  droplet_transparent.c  green_blue.c  home.c  light_blue.c  light_blue_dithered.c  light_blue_dithered_rotated.c  menu.c  point_temperature.c  temperature.c  thermometer.c  water.c  yellow_dithered.c
components/lvgl_setup/include/: lvgl_custom.h  lvgl_setup.h  lvgl_water_droplet.h  ui.h  ui_helpers.h
(+88 files in other folders)
